fix overflow

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,18 +2,24 @@
 
 html,
 body {
-  max-width: 100vw;
+  position: relative;
+  max-width: 100%;
   margin: 0;
   padding: 0;
-  // overflow-x: hidden;
 }
 
 body {
   background: $cream;
-  color: $black;
+  color: $forest;
   font-family: "font-greed-narrow", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+main {
+  position: relative;
+  width: 100%;
+  max-width: 100vw;
 }
 
 *,
